--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,6 @@ package: github.com/itsubaki/cfn
 import:
 - package: gopkg.in/urfave/cli.v1
   version: ^1.19.1
+import:
+- package: github.com/aws/aws-sdk-go
+  version: ^1.8.36
