--- a/glide.yaml
+++ b/glide.yaml
@@ -3,5 +3,4 @@ import:
 - package: gopkg.in/urfave/cli.v1
   version: ^1.19.1
 import:
-- package: github.com/aws/aws-sdk-go
-  version: ^1.8.36
+- package: gopkg.in/yaml.v2
